<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetActivity">

    <TextView
        android:id="@+id/output_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/time_no_mid"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/time_no_mid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/time_no_mid"
        android:textColor="#0a9f19"
        android:textSize="90sp"
        app:layout_constraintBottom_toTopOf="@+id/reset_left"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/time_mid"/>

    <Button
        android:id="@+id/time_mid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/time_mid"
        android:textColor="#303f9f"
        android:textSize="90sp"
        app:layout_constraintBottom_toTopOf="@+id/reset_right"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/time_no_mid"/>

    <Button
        android:id="@+id/reset_left"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_first"
        app:layout_constraintBottom_toTopOf="@+id/timeouts"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/reset_right"/>

    <Button
        android:id="@+id/reset_right"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_first"
        app:layout_constraintBottom_toTopOf="@+id/timeouts"
        app:layout_constraintLeft_toRightOf="@+id/reset_left"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/timeouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remain"
        android:textColor="#ccbfbf"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/timeout_right"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/timeout_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_timeout"
        android:textSize="70sp"
        app:layout_constraintBottom_toTopOf="@+id/serve"
        app:layout_constraintLeft_toLeftOf="@+id/new_game"
        app:layout_constraintRight_toLeftOf="@+id/timeout_right"/>

    <Button
        android:id="@+id/timeout_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_timeout"
        android:textSize="70sp"
        app:layout_constraintBottom_toTopOf="@+id/serve"
        app:layout_constraintLeft_toRightOf="@+id/timeout_left"
        app:layout_constraintRight_toRightOf="@+id/new_game"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="#ccbfbf"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/score_left"
        app:layout_constraintLeft_toLeftOf="@+id/score_left"
        app:layout_constraintRight_toRightOf="@+id/score_left"/>

    <Button
        android:id="@+id/score_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="55sp"
        android:text="@string/initial_score"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="#ccbfbf"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/score_right"
        app:layout_constraintLeft_toLeftOf="@+id/score_right"
        app:layout_constraintRight_toRightOf="@+id/score_right"/>

    <Button
        android:id="@+id/score_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="55sp"
        android:text="@string/initial_score"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/serve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serve"
        android:textColor="#ccbfbf"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/score_right"
        app:layout_constraintLeft_toLeftOf="@+id/team_left"
        app:layout_constraintRight_toRightOf="@+id/team_right"/>

    <Button
        android:id="@+id/team_left"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/team_left"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/new_game"
        app:layout_constraintLeft_toRightOf="@+id/score_left"
        app:layout_constraintRight_toLeftOf="@+id/team_right"/>

    <Button
        android:id="@+id/team_right"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/team_right"
        app:layout_constraintBottom_toTopOf="@+id/new_game"
        app:layout_constraintRight_toLeftOf="@+id/score_right"
        app:layout_constraintLeft_toRightOf="@+id/team_left"/>

    <Button
        android:id="@+id/new_game"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/new_game"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/score_right"
        app:layout_constraintLeft_toRightOf="@+id/score_left"/>

</android.support.constraint.ConstraintLayout>