<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormatActivity">
   <TextView
        android:id="@+id/tvconfig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/config"
        android:textAlignment="center"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

   <TextView
       android:id="@+id/tvsets"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="40dp"
       android:layout_marginStart="5dp"
       android:text="@string/tvsets"
       android:textAlignment="viewStart"
       android:textSize="50sp"
       android:textStyle="bold"
       app:layout_constraintTop_toBottomOf="@+id/tvconfig"
       app:layout_constraintLeft_toLeftOf="parent" />

    <com.ihm.nioh.foosballreferee.HorNumberPicker
        android:id="@+id/npsets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:textSize="50sp"
        android:textStyle="bold"
        android:text="@string/initial_score"
        app:layout_constraintTop_toTopOf="@+id/tvsets"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tvsets"/>

    <TextView
        android:id="@+id/tvgoals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/tvgoals"
        android:textAlignment="viewStart"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tvsets"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.ihm.nioh.foosballreferee.HorNumberPicker
        android:id="@+id/npgoals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:textSize="50sp"
        android:textStyle="bold"
        android:text="@string/initial_score"
        app:layout_constraintTop_toTopOf="@+id/tvgoals"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tvgoals"/>

    <TextView
        android:id="@+id/tvbalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/tvbalance"
        android:textAlignment="viewStart"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tvgoals"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.ihm.nioh.foosballreferee.HorNumberPicker
        android:id="@+id/npbal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:textSize="50sp"
        android:textStyle="bold"
        android:text="@string/initial_score"
        app:layout_constraintTop_toTopOf="@+id/tvbalance"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tvbalance"/>

    <Button
        android:id="@+id/startB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/round_butt"
        android:text="@string/start"
        android:textColor="#0a9f19"
        android:textSize="70sp"
        app:layout_constraintTop_toBottomOf="@+id/tvbalance"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/format"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/format"
        android:textAlignment="center"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

   <TextView
        android:id="@+id/tvleague"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/division"
        android:textAlignment="center"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

   <RadioGroup
        android:id="@+id/divs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#333333"
        android:orientation="vertical"
       android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvleague"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <RadioButton
            android:id="@+id/div12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/round_butt"
            android:text="@string/div12"
            android:textAllCaps="false"
            android:textColor="#0a9f19"
            android:textSize="70sp" />

        <RadioButton
            android:id="@+id/fun_div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/round_butt"
            android:text="@string/amateur"
            android:textAllCaps="false"
            android:textColor="#0a9f19"
            android:textSize="70sp"
            app:layout_constraintBottom_toBottomOf="@+id/div12"/>

    </RadioGroup>

    <Button
        android:id="@+id/startL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/round_butt"
        android:text="@string/start"
        android:textColor="#0a9f19"
        android:textSize="70sp"
        app:layout_constraintTop_toBottomOf="@+id/divs"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


        <Button
        android:id="@+id/league"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/round_butt"
        android:text="@string/league"
        android:textAllCaps="false"
        android:textColor="#0a9f19"
        android:textSize="70sp"
        app:layout_constraintTop_toBottomOf="@+id/format"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bon" />

    <Button
        android:id="@+id/bon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/round_butt"
        android:text="@string/bon"
        android:textAllCaps="false"
        android:textColor="#0a9f19"
        android:textSize="70sp"
        app:layout_constraintTop_toBottomOf="@+id/league"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/empty" />



    <TextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textAlignment="center"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bon" />

</android.support.constraint.ConstraintLayout>